Fix sizing/spacing issues in sidebar content
* Make headings in the sidebar the same size as the headings in the drawer
* Remove definition-specific color; try to clean up padding

--- a/regulations/static/regulations/css/scss/partials/_sidebar.scss
+++ b/regulations/static/regulations/css/scss/partials/_sidebar.scss
@@ -35,7 +35,9 @@ Sidebar
 
   // Headers within the sidebar should be <h4>
   h4 {
-    font-size: 0.857142857em;
+    padding: 0 10px;
+    font-size: 1em * $sans_font_scale_factor;
+    line-height: 40px;
     margin: 0;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -116,24 +118,25 @@ Sidebar Expandables
 Sidebar Headers
 ===============
 */
+// @todo - this is used by definitions but _not_ by other sidebar headers.
+// Combine
 .sidebar-header {
   @extend .group;
   background-color: $gray_lightest;
 
   h4 {
-    color: $gray_light;
-    padding: 0.5em 0 0.5em 0.9375em;
     @include sans-font-bold;
     text-transform: uppercase;
-    padding-right: 25px;
   }
 
   .close-button {
-    margin-top: .2em;
+    margin-right: 15px;
+    margin-top: 13px;
     text-indent: -9999px;
     background: url('../img/close.png') no-repeat 0 0;
     cursor: pointer;
     z-index: 99999;
+    height: 13px;
     width: 13px;
   }
 
@@ -170,8 +173,11 @@ Regs Meta contains the sub-content meta data found in the sidebar
 .regs-meta {
 
   h4 {
-    padding: 0.5em 1em;
     @include sans-font-bold;
+  }
+
+  h5 {
+    font-size: 16px * $sans_font_scale_factor;
   }
 
   /* We either use a subtitle + "What's this?" or an inline explanation
